{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 65,
  "lineage": "c95538f0-556c-c178-8eda-c4944404085d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:internet-gateway/igw-00f9e1f2a5dd09dd6",
            "id": "igw-00f9e1f2a5dd09dd6",
            "owner_id": "961090741709",
            "tags": {
              "Name": "ig_obl"
            },
            "tags_all": {
              "Name": "ig_obl"
            },
            "vpc_id": "vpc-01da7903363649e46"
          },
          "dependencies": [
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:route-table/rtb-09e1d5a038a5cdb71",
            "id": "rtb-09e1d5a038a5cdb71",
            "owner_id": "961090741709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f9e1f2a5dd09dd6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01da7903363649e46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_obl",
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_subnet01_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d51f28bdfb775392",
            "route_table_id": "rtb-09e1d5a038a5cdb71",
            "subnet_id": "subnet-065212c6e6e160a9c"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obl",
            "aws_route_table.rt_obl",
            "aws_subnet.subnet_obl_01",
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_subnet02_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002735faa3f7d8296",
            "route_table_id": "rtb-09e1d5a038a5cdb71",
            "subnet_id": "subnet-0a1c02b482aed7ccb"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obl",
            "aws_route_table.rt_obl",
            "aws_subnet.subnet_obl_02",
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:security-group/sg-087ee4ecfbca36581",
            "description": "SG para el obligatorio",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087ee4ecfbca36581",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_obl",
            "name_prefix": "",
            "owner_id": "961090741709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_obl"
            },
            "tags_all": {
              "Name": "sg_obl"
            },
            "timeouts": null,
            "vpc_id": "vpc-01da7903363649e46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_obl_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:subnet/subnet-065212c6e6e160a9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065212c6e6e160a9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961090741709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_obl_01"
            },
            "tags_all": {
              "Name": "subnet_obl_01"
            },
            "vpc_id": "vpc-01da7903363649e46"
          },
          "dependencies": [
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_obl_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:subnet/subnet-0a1c02b482aed7ccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c02b482aed7ccb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961090741709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_obl_02"
            },
            "tags_all": {
              "Name": "subnet_obl_02"
            },
            "vpc_id": "vpc-01da7903363649e46"
          },
          "dependencies": [
            "aws_vpc.vpc_obl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961090741709:vpc/vpc-01da7903363649e46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047e6fc651e444725",
            "default_route_table_id": "rtb-005485fdc1d88c016",
            "default_security_group_id": "sg-0de838982621fce01",
            "dhcp_options_id": "dopt-0891b1725c2cea080",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01da7903363649e46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005485fdc1d88c016",
            "owner_id": "961090741709",
            "tags": {
              "Name": "vpc_obl"
            },
            "tags_all": {
              "Name": "vpc_obl"
            }
          }
        }
      ]
    }
  ]
}